--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
     "private": true,
-    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build"
@@ -12,5 +11,9 @@
         "postcss": "^8.4.28",
         "tailwindcss": "^3.3.3",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^4.4.0",
+        "vue-router": "^4.2.5"
     }
 }
