--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.4.0",
+        "pinia": "^2.1.7",
+        "vue": "^3.3.4",
         "vue-router": "^4.2.5"
     }
 }
